# CVPuzzleSolver

./: CMakeLists.txt
libs/base/: CMakeLists.txt
libs/base/libbase/: runtime_assert.h
libs/images/: CMakeLists.txt
libs/images/libimages/: color.cpp  color.h  debug_io.cpp  debug_io_tests.cpp  draw.cpp  draw.h  draw_tests.cpp  image.cpp  image.h  image_io.cpp  image_io.h  tests_utils.cpp  tests_utils.h
libs/images/libimages/algorithms/: grayscale.cpp  grayscale.h  grayscale_tests.cpp
prompts/: 11 реализуй функцию для рисования на картинке.txt
src/: CMakeLists.txt  main.cpp
